--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script>
+      var tripPrice = document.getElementsByClassName("price")[0].innerText;  
+      console.log(tripPrice)
+      dataLayer = [{'tripValue': tripPrice}];
+    </script>
   </head>
 
   <body>
@@ -29,6 +34,7 @@
       First name: <input type="text" name="fname"><br>
       Last name: <input type="text" name="lname"><br>
       <input type="submit" value="Submit">
+      <h4 class="price">200</h4>
     </form>
     <p>fsfsafsdsfs</p>
 
