--- a/index.html
+++ b/index.html
@@ -29,7 +29,21 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h1>Hello Plunker!</h1>
     
-    <a href="second.html">Second Page</a>
+    <a class="locoPlace" href="second.html" onclick="dataLayer.push({
+      'tripCategory': 'skiing',
+      'tripLocation': 'Canada'
+    })">Second Page</a>
+    <a class="locoPlace" href="second.html" onclick="dataLayer.push({
+      'tripCategory': 'snowboarding',
+      'tripLocation': 'USA'
+    })">Thrid Page</a>
+    <a class="locoPlace" href="second.html" onclick="dataLayer.push({
+      'tripCategory': 'bobsled',
+      'tripLocation': 'Switzerland'
+    })">Forth Page</a>
+    
+    <br><br>
+
     <form action="/action_page.php">
       First name: <input type="text" name="fname"><br>
       Last name: <input type="text" name="lname"><br>
