--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script>
-      var tripPrice = document.getElementsByClassName("price")[0].innerText;  
-      console.log(tripPrice)
-      dataLayer = [{'tripValue': tripPrice}];
+      // var tripPrice = document.getElementsByClassName("price")[0].innerText;  
+      // console.log(tripPrice)
+      dataLayer = [];
     </script>
   </head>
 
