--- a/second.html
+++ b/second.html
@@ -22,12 +22,12 @@
       console.log(tripPrice)
       dataLayer = [{'tripValue': tripPrice}];
     </script>
-    <script>
+    <!-- <script>
         // var tripPrice = document.getElementsByClassName("price")[0].innerText;  
         // console.log(tripPrice)
         dataLayer = [{'tripCategory': 'snowboarding',
       'tripLocation': 'USA'}];
-      </script>
+      </script> -->
   </head>
 
   <body>
