--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
     </form>
     <p>fsfsafsdsfs</p>
 
+    <button><a href="second.html">item 1</a></button>
+    <button><a href="second.html">item 2</a></button>
+    <button><a href="second.html">item 3</a></button>
+    <button><a href="second.html">item 4</a></button>
+    <button><a href="second.html">item 5</a></button>
+    <button><a href="second.html">item 6</a></button>
+
   </body>
 
   <script>
