--- a/second.html
+++ b/second.html
@@ -33,6 +33,8 @@
     <p>fsfsafsdsfs</p>
     <h4 class="price">200</h4>
     <button><a href="index.html">BACK</a></button>
+    <button><a href="cart.html">add to cart</a></button>
+
 
   </body>
   <script>
